Fix: Gap /proyectos

--- a/styles/wordpress/proyectos.module.scss
+++ b/styles/wordpress/proyectos.module.scss
@@ -27,7 +27,7 @@
         & > div {
             display: grid;
             grid-template-columns: 1fr 1fr;
-            gap: 10rem;
+            gap: 5rem 10rem;
             & > div {
                 display: flex;
                 flex-direction: column;
